[package]
name = "hello-world"
version = "0.1.0"
authors = ["blck-snwmn <whitesnowmancreator@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }

[[bin]]
name = "hello_world"
path = "src/bin/hello_world.rs"

[[bin]]
name = "multi_thread"
path = "src/bin/multi_thread.rs"

[[bin]]
name = "async_tokio"
path = "src/bin/asynchronous_tokio.rs"

[[bin]]
name = "drop"
path = "src/bin/drop.rs"

[[bin]]
name = "use_macro"
path = "src/bin/use_macro.rs"

[[bin]]
name = "use_channel"
path = "src/bin/use_channel.rs"
